More mobile tweaks

--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -1123,6 +1123,11 @@ html {
     padding: 0.9rem 1.25rem 0.95rem 1.25rem;
     clear: none;
 }
+@media only screen and (max-width: 649px) {
+	.abstract blockquote {
+    	padding: 0.75rem 1rem 0.8rem 1rem;
+	}
+}
 
 /*	Auto-smallcaps the first line of the introduction (= the first `<p>` after 
 	an ‘abstract’ div); this avoids the need to manually specify what to 
