Hide and ignore elements with aria-hidden=true

--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -1138,6 +1138,10 @@ figure video {
 /* MISC */
 /********/
 
+[aria-hidden='true'] {
+	display: none;
+}
+
 /*  Enable standard Pandoc attribute-based syntax for small-caps like 
 	‘[foo]{.smallcaps}’; see https://pandoc.org/MANUAL.html#small-caps
  */
