--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -591,7 +591,8 @@ header h1 {
 	margin: 0 0.05em 0 0.1em;
 }
 
-#page-metadata > div > * {
+#page-metadata > .link-tags,
+#page-metadata-block {
     hyphens: none;
 }
 
@@ -614,6 +615,7 @@ header h1 {
 	}
 	#page-description {
 		margin: 0 auto 0.75em auto;
+    	hyphens: none;
 	}
 	#page-metadata-block,
 	#page-metadata > .link-tags {
@@ -631,8 +633,6 @@ header h1 {
 	#page-description {
 		margin: 0 auto 1em auto;
 		line-height: calc(25/17);
-		-webkit-hyphens: auto;
-		hyphens: auto;
 	}
     #page-metadata > .link-tags,
     #page-metadata-block {
