--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -1124,7 +1124,7 @@ body.index #markdownBody ul > li:nth-of-type(n+2) {
     natively in the SS fonts:
     https://practicaltypography.com/alternate-figures.html#oldstyle-figures
  */
-html {
+.markdownBody {
     font-variant-numeric: oldstyle-nums;
 }
 
