--- a/css/default.css
+++ b/css/default.css
@@ -3697,6 +3697,8 @@ body.index-directory #footer {
 /*└─────────────────────┘*/
 
 .popup .popframe-content-view {
+    --GW-base-font-size: 0.9rem;
+
     background-color: var(--GW-popups-popup-background-color);
     padding: 0.7em 0.9em 0.8em 0.9em;
     overflow: auto;
@@ -3810,9 +3812,8 @@ body.index-directory #footer {
     left: 0;
     right: 0;
     margin: auto;
+    text-indent: 0;
     display: block;
-    justify-content: center;
-    align-items: center;
     overflow: hidden;
     opacity: 0.2;
     z-index: 1;
@@ -4481,9 +4482,8 @@ body.index-directory #footer {
     left: 0;
     right: 0;
     margin: auto;
+    text-indent: 0;
     display: block;
-    justify-content: center;
-    align-items: center;
     overflow: hidden;
     opacity: 0.2;
     z-index: 1;
@@ -4494,7 +4494,7 @@ body.index-directory #footer {
 }
 
 /*  Loading spinner (for object popins).
-    */
+ */
 .popin.loading::before {
     content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M288 24.103v8.169a11.995 11.995 0 0 0 9.698 11.768C396.638 63.425 472 150.461 472 256c0 118.663-96.055 216-216 216-118.663 0-216-96.055-216-216 0-104.534 74.546-192.509 174.297-211.978A11.993 11.993 0 0 0 224 32.253v-8.147c0-7.523-6.845-13.193-14.237-11.798C94.472 34.048 7.364 135.575 8.004 257.332c.72 137.052 111.477 246.956 248.531 246.667C393.255 503.711 504 392.789 504 256c0-121.187-86.924-222.067-201.824-243.704C294.807 10.908 288 16.604 288 24.103z"/></svg>');
     animation: fa-spin 2s infinite linear;
@@ -4514,7 +4514,7 @@ body.index-directory #footer {
 }
 
 /*  “Loading failed” messages (for object popups).
-    */
+ */
 .popin.loading-failed::after {
     content: "Loading failed.";
     position: absolute;
