--- a/404.page
+++ b/404.page
@@ -97,7 +97,7 @@ Other search options:
 - [Genetics and Eugenics in Frank Herbert’s Dune-verse](/Dune-genetics "Branwen 2018"){.backlink-not}
 - [CO<sub>2</sub> Coin: Decentralized Carbon Capture Blockchains](/CO2-Coin "Branwen 2021"){.backlink-not}
 - [Wei Dai/Satoshi Nakamoto 2009 Bitcoin emails](/docs/bitcoin/2008-nakamoto "Nakamoto & Dai 2014"){.backlink-not}
-- ["Earth in My Window"](/docs/eva/2005-murakami "Murakami & Hoaglund 2012"){.backlink-not}
+- ["Earth in My Window"](/docs/eva/little-boy/2005-murakami "Murakami & Hoaglund 2012"){.backlink-not}
 - [Book Reviews](/reviews/Books "Branwen 2013"){.backlink-not}
 - [How Should We Critique Research?](/Research-criticism "Branwen 2019"){.backlink-not}
 - [Open Questions](/Questions "Branwen 2018"){.backlink-not}
@@ -202,7 +202,7 @@ Other search options:
 - [Fake Journal Club: Teaching Critical Reading](/Fake-Journal-Club "Branwen 2022"){.backlink-not}
 - [Wikipedia resume](/Wikipedia-resume){.backlink-not}
 - [Choosing Software](/Choosing-Software){.backlink-not}
-- ["Otaku Talk"](/docs/eva/2004-okada){.backlink-not}
+- ["Otaku Talk"](/docs/eva/little-boy/2004-okada){.backlink-not}
 - [Reasons of State: Why Didn’t Denmark Sell Greenland?](/Greenland "Branwen 2011"){.backlink-not}
 - [Efficient Attention: Breaking The Quadratic Transformer Bottleneck](/notes/Attention "Branwen 2020"){.backlink-not}
 - [May 1997 _AnimeLand_ Interview with Hideaki Anno (English)](/docs/eva/1997-animeland-may-hideakianno-interview-english "Anno 2012"){.backlink-not}
