--- a/404.page
+++ b/404.page
@@ -121,7 +121,7 @@ Other search options:
 - [`/newsletter/2020/04`](/newsletter/2020/04){.backlink-not}
 - [`/newsletter/2020/12`](/newsletter/2020/12){.backlink-not}
 - [`/newsletter/2021/06`](/newsletter/2021/06){.backlink-not}
-- [Silk Road 1: Theory & Practice](/docs/silk-road/index "Branwen 2011"){.backlink-not}
+- [Silk Road 1: Theory & Practice](/docs/darknet-markets/index "Branwen 2011"){.backlink-not}
 - [Potassium sleep experiments](/zeo/Potassium "Branwen 2012"){.backlink-not}
 - [June 1996 _NewType_ Interview with Hideaki Anno](/docs/eva/1996-newtype-anno-interview "Anno & Inoue 2012"){.backlink-not}
   [Statistical notes](/Statistical-notes){.backlink-not}
