--- a/includes/inlined-graphical-linkicon-styles.html
+++ b/includes/inlined-graphical-linkicon-styles.html
@@ -59,6 +59,7 @@ a[data-link-icon='cochrane-collaboration'] { --link-icon-url: url('/static/img/i
 a[data-link-icon='connected-papers'] { --link-icon-url: url('/static/img/icons/connected-papers.svg'); }
 a[data-link-icon='nasa'] { --link-icon-url: url('/static/img/icons/nasa.svg'); }
 a[data-link-icon='metaculus'] { --link-icon-url: url('/static/img/icons/metaculus.svg'); }
+a[data-link-icon='wandb'] { --link-icon-url: url('/static/img/icons/wandb.svg'); }
 a[data-link-icon='arrow-up-left'] { --link-icon-url: url('/static/img/icons/arrow-up-left.svg'); }
 a[data-link-icon='arrow-down-right'] { --link-icon-url: url('/static/img/icons/arrow-down-right.svg'); }
 a[data-link-icon='arrow-right'] { --link-icon-url: url('/static/img/icons/arrow-right.svg'); }
