--- a/404.page
+++ b/404.page
@@ -103,24 +103,24 @@ Other search options:
 - [Open Questions](/Questions "Branwen 2018"){.backlink-not}
 - [Hydrocephalus and Intelligence: The Hollow Men](/Hydrocephalus "Branwen 2015"){.backlink-not}
 - [Zeo sleep self-experiments](/Zeo "Branwen 2010"){.backlink-not}
-- [`/newsletter/2020/06`](/newsletter/2020/06){.backlink-not}
-- [`/newsletter/2021/03`](/newsletter/2021/03){.backlink-not}
+- [`/newsletter/2020/06`](/newsletter/2020/06 "‘June 2020 News’, Branwen 2019"){.backlink-not}
+- [`/newsletter/2021/03`](/newsletter/2021/03 "‘March 2021 News’, Branwen 2020"){.backlink-not}
 - [One Man’s Modus Ponens](/Modus "Branwen 2012"){.backlink-not}
 - [Everything Is Correlated](/Everything "Branwen 2014"){.backlink-not}
 - [Why Tool AIs Want to Be Agent AIs](/Tool-AI "Branwen 2016"){.backlink-not}
-- [`/newsletter/2021/01`](/newsletter/2021/01){.backlink-not}
+- [`/newsletter/2021/01`](/newsletter/2021/01 "‘January 2021 News’, Branwen 2020"){.backlink-not}
 - [GPT-3 Nonfiction experiments](/GPT-3-nonfiction "'GPT-3 Nonfiction', Branwen 2020"){.backlink-not}
-- [`/newsletter/2020/08`](/newsletter/2020/08){.backlink-not}
-- [`/newsletter/2020/07`](/newsletter/2020/07){.backlink-not}
-- [`/newsletter/2020/10`](/newsletter/2020/10){.backlink-not}
-- [`/newsletter/2020/11`](/newsletter/2020/11){.backlink-not}
+- [`/newsletter/2020/08`](/newsletter/2020/08 "‘August 2020 News’, Branwen 2019"){.backlink-not}
+- [`/newsletter/2020/07`](/newsletter/2020/07 "‘July 2020 News’, Branwen 2019"){.backlink-not}
+- [`/newsletter/2020/10`](/newsletter/2020/10 "‘October 2020 News’, Branwen 2019"){.backlink-not}
+- [`/newsletter/2020/11`](/newsletter/2020/11 "‘November 2020 News’, Branwen 2019"){.backlink-not}
 - [Terrorism is not about Terror](/Terrorism-is-not-about-Terror){.backlink-not}
 - [Sunk costs](/Sunk-cost){.backlink-not}
 - [Magnesium Self-Experiments](/nootropics/Magnesium "Branwen 2013"){.backlink-not}
 - [The Math of Hunting Lions](/notes/Lions){.backlink-not}
-- [`/newsletter/2020/04`](/newsletter/2020/04){.backlink-not}
-- [`/newsletter/2020/12`](/newsletter/2020/12){.backlink-not}
-- [`/newsletter/2021/06`](/newsletter/2021/06){.backlink-not}
+- [`/newsletter/2020/04`](/newsletter/2020/04 "‘April 2020 News’, Branwen 2019"){.backlink-not}
+- [`/newsletter/2020/12`](/newsletter/2020/12 "‘December 2020 News’, Branwen 2019"){.backlink-not}
+- [`/newsletter/2021/06`](/newsletter/2021/06 "‘June 2021 News’, Branwen 2020"){.backlink-not}
 - [Silk Road 1: Theory & Practice](/docs/darknet-markets/index "Branwen 2011"){.backlink-not}
 - [Potassium sleep experiments](/zeo/Potassium "Branwen 2012"){.backlink-not}
 - [June 1996 _NewType_ Interview with Hideaki Anno](/docs/eva/1996-newtype-anno-interview "Anno & Inoue 2012"){.backlink-not}
@@ -130,14 +130,14 @@ Other search options:
 - ["The Iron Law Of Evaluation And Other Metallic Rules"](/docs/sociology/1987-rossi "Rossi 2012"){.backlink-not}
 - [On Having Enough Socks](/Socks "Branwen 2017"){.backlink-not}
 - [The Replication Crisis: Flaws in Mainstream Science](/Replication "Branwen 2010"){.backlink-not}
-- [`/newsletter/2021/02`](/newsletter/2021/02){.backlink-not}
+- [`/newsletter/2021/02`](/newsletter/2021/02 "‘February 2021 News’, Branwen 2020"){.backlink-not}
 - [Timing Technology: Lessons From _The Media Lab_](/Timing "Branwen 2012"){.backlink-not}
 - [The Kelly Coin-Flipping Game: Exact Solutions](/Coin-flip "Branwen et al 2017"){.backlink-not}
 - [`/docs/nootropic/quantified-self/index`](/docs/nootropic/quantified-self/index "'Essays', N/A 2009"){.backlink-not}
 - [Iodine and Adult IQ meta-analysis](/Iodine "Branwen 2012"){.backlink-not}
 - [Dual _n_-Back Meta-Analysis](/DNB-meta-analysis "Branwen 2012"){.backlink-not}
 - [When Should I Check The Mail?](/Mail-delivery "Branwen 2015"){.backlink-not}
-- [`/newsletter/2021/04`](/newsletter/2021/04){.backlink-not}
+- [`/newsletter/2021/04`](/newsletter/2021/04 "‘April 2021 News’, Branwen 2020"){.backlink-not}
 - [The Existential Risk of Mathematical Error](/The-Existential-Risk-of-Mathematical-Error){.backlink-not}
 - ["Ero-Anime: Manga Comes Alive"](/docs/anime/2010-sarrazin){.backlink-not}
 - [The "Screwfly Solution" Solution: Bi-Sexuality](/Screwfly){.backlink-not}
@@ -147,12 +147,12 @@ Other search options:
 - [Who Wrote The _Death Note_ Script?](/Death-Note-script "Branwen 2009"){.backlink-not}
 - [Rubrication Design Examples](/Red "Branwen 2019"){.backlink-not}
 - [Longevity decision analysis](/Longevity){.backlink-not}
-- [`/newsletter/2019/13`](/newsletter/2019/13){.backlink-not}
+- [`/newsletter/2019/13`](/newsletter/2019/13 "‘2019 News’, Branwen 2019"){.backlink-not}
 - [_Utena_ boxset notes](/docs/anime/1997-utena){.backlink-not}
 - [Tryon’s Rat Experiment](/Tryon "Branwen 2020"){.backlink-not}
 - [_Genius Revisited_ Revisited](/Hunter "Branwen 2016"){.backlink-not}
 - [Epigrams](/Epigrams){.backlink-not}
-- [`/newsletter/2020/09`](/newsletter/2020/09){.backlink-not}
+- [`/newsletter/2020/09`](/newsletter/2020/09 "‘September 2020 News’, Branwen 2019"){.backlink-not}
 - [_Death Note_ Ending](/Death-Note-Ending){.backlink-not}
 - [The Melancholy of Kyon](/The-Melancholy-of-Kyon){.backlink-not}
 - [Calculating The Gaussian Expected Maximum](/Order-statistics "Branwen 2016"){.backlink-not}
@@ -164,7 +164,7 @@ Other search options:
 - [CO2/ventilation sleep experiment](/zeo/CO2 "Branwen 2016"){.backlink-not}
 - [ZMA Sleep Experiment](/zeo/ZMA "Branwen 2017"){.backlink-not}
 - [_MLP_: Immanetizing The Equestrian](/reviews/MLP "Branwen 2018"){.backlink-not}
-- [`/newsletter/2020/03`](/newsletter/2020/03){.backlink-not}
+- [`/newsletter/2020/03`](/newsletter/2020/03 "‘March 2020 News’, Branwen 2019"){.backlink-not}
 - ["Scanners Live in Vain" as realistic SF](/Scanners "Branwen 2013"){.backlink-not}
 - [Lizardman Constant in Surveys](/notes/Lizardman-constant "Branwen 2013"){.backlink-not}
 - [Anime Reviews](/reviews/Anime "Branwen 2010"){.backlink-not}
@@ -191,7 +191,7 @@ Other search options:
 - [Nash 1955](/docs/cs/cryptography/1955-nash){.backlink-not}
 - [Does Mouse Utopia Exist?](/Mouse-Utopia "Branwen 2019"){.backlink-not}
 - [Ordinary Incompetence](/notes/Competence){.backlink-not}
-- [`/newsletter/2020/13`](/newsletter/2020/13){.backlink-not}
+- [`/newsletter/2020/13`](/newsletter/2020/13 "‘2020 News’, Branwen 2019"){.backlink-not}
 - [An Abortion Dialogue](/An-Abortion-Dialogue){.backlink-not}
 - [On Seeing Through and Unseeing: The Hacker Mindset](/Unseeing "Branwen 2012"){.backlink-not}
 - [What Is The Collecting Mindset?](/Collecting){.backlink-not}
